Опис змін, які ви внесли

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
      <!-- Header section -->
      <header class="header">
         <nav class="logo-nav">
+
             <div class="wrapper">
-                <a class="logo" href="./index.html">
-                    Web<span class="dark">Studio</span>
-                </a>
+                <a class="logo-main" href="./index.html">Web<span class="dark">Studio</span></a>
             </div>
+
+
             <ul class="header-list">
                 <li class="header-item">
                     <a class="nav-link" href="./index.html">Studio</a>
